--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.algebra.AlgebraFragment"
+            android:theme="@style/Theme.FlameMathNew.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
