--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@drawable/mathultra"
         android:supportsRtl="true"
         android:theme="@style/Theme.FlameMathNew">
+        <activity android:name=".ui.algebra.MultMatrixActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -21,8 +22,7 @@
         </activity>
         <activity
             android:name=".ui.algebra.AlgebraActivity"
-            android:theme="@style/Theme.FlameMathNew.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.FlameMathNew.NoActionBar"></activity>
     </application>
 
 </manifest>
